[#40] fix alignment of header button
Change them on a static menu.
It's necessary to change branch link from satic to variable links

--- a/css/cayman.css
+++ b/css/cayman.css
@@ -239,3 +239,21 @@ a {
 
 .site-footer-credits {
   color: #819198; }
+
+.page-navigator{
+	background-color: #333;
+}
+
+.page-navigator > ul{
+	margin: 0px;
+	text-align: right;
+}
+
+.page-navigator > ul a{
+	color: #fff;
+}
+
+.page-navigator > ul > li{
+	display: inline-block;
+	padding: 15px 15px;
+}
